src/hosts/friday/k8s/apps/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-http
  namespace: friday
spec:
  selector:
    app: forgejo
  ports:
  - name: http
    port: 3000
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: friday
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: forgejo
  ports:
  - name: ssh
    port: 2222
    targetPort: ssh
