src/hosts/friday/k8s/apps/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: friday
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - lab.we8.dev
    secretName: wildcard-we8-dev-tls
  rules:
  - host: lab.we8.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo-http
            port:
              number: 3000
